tests/error/prim_ref.gw
// [contains] primitive types cannot be used as reference
int @i;
